fix with overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,8 +16,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   background-color: #ffb997;
   max-width: 100%;
   height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   position: relative;
 }
 
@@ -210,6 +209,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   .container_modal {
+    overflow-x: visible;
     display: block;
     position: relative;
     transform: translate(0, 50%);
@@ -217,7 +217,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     color: rgba(10, 3, 43,0);
     padding: 1rem;
     width: 50%;
-    height: 100%;
+    height: 100vh;
     z-index: 5;
     margin-top: 2rem;
   }
@@ -342,6 +342,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   .resume-height {
     height: 100%;
     padding: 1rem;
+    overflow: auto;
   }
   
   @keyframes animation {
@@ -478,10 +479,17 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     .lines {
       display: none;
     }
+
+    .resume-height {
+      overflow: scroll !important;
+      height: 100vh;
+    }
   
     .container_modal {
-      width: 90%;
+      margin-bottom: 2rem;
+      overflow: scroll !important;
       height: 100%;
+      width: 90%;
     }
   
     .container_modal h3 {
@@ -508,11 +516,5 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
 
     .footer {
       display: none;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    .container_modal {
-      height: 100%;
     }
   }
